--- a/.vitepress/theme/styles/vars.css
+++ b/.vitepress/theme/styles/vars.css
@@ -3,12 +3,13 @@
  * -------------------------------------------------------------------------- */
 
  :root {
-  --vp-c-brand: #646cff;
-  --vp-c-brand-light: #747bff;
-  --vp-c-brand-lighter: #9499ff;
-  --vp-c-brand-lightest: #bcc0ff;
-  --vp-c-brand-dark: #535bf2;
-  --vp-c-brand-darker: #454ce1;
+  --vp-c-brand:    #68ce25;
+
+  --vp-c-brand-light:  #68ce25;
+  --vp-c-brand-lighter: #68ce25;
+  --vp-c-brand-lightest: #68ce25;
+  --vp-c-brand-dark:  #68ce25;
+  --vp-c-brand-darker:  #68ce25;
   --vp-c-brand-dimm: rgba(100, 108, 255, 0.08);
 }
 
@@ -36,13 +37,13 @@
   --vp-home-hero-name-color: transparent;
   --vp-home-hero-name-background: -webkit-linear-gradient(
     120deg,
-    #bd34fe 30%,
+    #68ce25 50%,
     #41d1ff
   );
 
   --vp-home-hero-image-background-image: linear-gradient(
     -45deg,
-    #bd34fe 50%,
+    #68ce25 50%,
     #47caff 50%
   );
   --vp-home-hero-image-filter: blur(40px);
